Added Render Template in a better way

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,10 @@
         "titleBar.inactiveBackground": "#226f7c99",
         "titleBar.inactiveForeground": "#e7e7e799"
     },
-    "peacock.color": "#226f7c"
+    "peacock.color": "#226f7c",
+    "[go]": {
+        "editor.insertSpaces": true,
+        "editor.formatOnSave": true,
+        "editor.defaultFormatter": "golang.go"
+    },
 }
